--- a/src/pages/underconstruction.astro
+++ b/src/pages/underconstruction.astro
@@ -3,6 +3,8 @@ import GithubWidget from '../components/GithubWidget.astro';
 import HeroSection from '../components/HeroSection.astro';
 import ServicesSection from '../components/ServicesSection.astro';
 import StepsSection from '../components/StepsSection.astro';
+import BannerSection from '../components/BannerSection.astro';
+import TestimonialSection from '../components/TestimonialSection.astro';
 import BaseHead from '../components/BaseHead.astro';
 import BaseFooter from '../components/BaseFooter.astro';
 
@@ -11,7 +13,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 import { Picture, Image } from "astro:assets";
 import AstroLogo from '../images/logos/astro-logo-dark.svg';
 import CrossIcon from '../images/logos/Cross.svg'
----
+---  
 
 <!doctype html>
 <html lang="en">
@@ -37,47 +39,10 @@ import CrossIcon from '../images/logos/Cross.svg'
       </div>
 
       <StepsSection />
-      
-      <!-- STUDY CASES -->
-      <section class="px-0 mx-auto max-w-7xl sm:px-4 text-center sectionSize" style="padding-top: 0;padding-bottom: 0;">
-        <div class="py-12 hover:shadow-2xl border border-black bg-black grid items-center grid-cols-1 gap-10 px-4 overflow-hidden text-white rounded-none sm:rounded-lg md:px-10 md:grid-cols-5 lg:gap-0">
-          <div class="col-span-1 md:col-span-3">
-            <h2 class="secondaryTitle bg-underline2 bg-contain bg-100%">Study Cases</h2>
-            <p class="mb-6 text-sm font-montserrat lg:text-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero incidunt consequatur hic! Est deserunt ipsum laboriosam omnis aliquam assumenda vero autem quam libero debitis eius molestiae natus dolores, voluptatum voluptas!</p>
-                    <a href="#" class="inline-block mt-2 mx-auto border-2 px-6 py-2 rounded-lg border-white bg-white text-black font-bold">Read blog</a>
-                </div>
-                <!-- <div class="col-span-1 md:col-span-2">
-                    <img src="blog-placeholder-4.jpg" class="w-full ml-0 select-none lg:ml-32" alt="Blog">
-                </div> -->
-            </div>
-        </section>
+      <TestimonialSection />
 
-        <!-- TESTIMONIALS -->
-        <section class="py-10 md:py-16 sectionSize text-center">
-            <div class="container max-w-screen-xl mx-auto px-4">
-                <h2 class="secondaryTitle bg-100%" style="margin-bottom: 0;">Testimonial</h2>
 
-                <!-- <p class="font-normal text-gray-500 text-xs md:text-base mb-10 md:mb-20">
-                    We are proud to work with our clients
-                </p> -->
-
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                    <div class="bg-gray-50 px-8 py-10 rounded-md">
-                        <p class="font-normal text-gray-500 text-md mb-4 italic">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                            incididunt ut labore et dolore magna aliqua.
-                        </p>
-
-                        <h6 class="font-semibold text-[#000] text-md">
-                            Stephan Clark
-                            <span class="font-medium text-gray-300 text-sm">- CEO at EarlyBird</span>
-                        </h6>
-                    </div>
-
-                    
-                </div>
-            </div>
-        </section>
+        <BannerSection />
 
         <!-- FAQ -->
         <!-- <section class="sectionSize items-start pt-8 md:pt-36 bg-black text-white">
